--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Assign veriables to Env variable
+        run: |
+          cat ci_environments.txt >> $GITHUB_ENV
+
       - name: Install Requirements
         run: |
           python -m pip install --upgrade pip
@@ -38,7 +42,7 @@ jobs:
 
       - name: Lint with flake8
         run: |
-          flake8 --exit-zero --ignore=${{ env.flake8_ignore }} --max-complexity=${{ env.max_complexity }} --max-line-length=${{ env.max_line_length }} --exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,nowcast --output-file=flake8.txt .
+          flake8 --exit-zero --ignore=${{ env.flake8_ignore }} --max-complexity=${{ env.max_complexity }} --max-line-length=${{ env.max_line_length }} --exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg --output-file=flake8.txt .
 
       - name: flake8 report
         uses: actions/upload-artifact@v2
