--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint pytest pytest-cov flake8
-          # pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Lint with flake8
         run: |
